--- a/index.html
+++ b/index.html
@@ -62,11 +62,32 @@
   </head>
   <body>
 
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous">
     </script>
+
+<script type="text/javascript">
+  window.setTimeout("tampilwaktu()", 1000);
+
+  function tampilwaktu() {
+    var waktu= new Date();
+    var bulan= waktu.getMonth() + 1;
+  
+    document.getElementById("tanggal").innerHTML =
+    waktu.getDate() + "/" + bulan + "/" + waktu.getFullYear() + "-";
+   
+    document.getElementById("jam").innerHTML =
+      waktu.getHours() + ":" +
+      waktu.getMinutes();
+
+      setTimeout  ("tampilwaktu()", 1000);
+
+  }
+  window.onload = tampilWaktu;
+  </script>
 
   <!-- navigasi bar -->
    <nav nav class="navbar sticky-top navbar-expand-lg nav-padding bg-body">
@@ -82,6 +103,10 @@
           aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+        <p>
+          <div id="tanggal"></div>
+          <div id="jam"></div>
+        </p>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
@@ -99,7 +124,7 @@
               <a class="nav-link" href="#about">About</a>
             </li>
           </ul>
-          <form class="d-flex" role="search">
+          <form class="d-flex " role="search">
             <input
               class="form-control me-2"
               type="search"
@@ -138,6 +163,12 @@
         </div>
       </div>
     </nav>
+
+  <!-- jam -->
+   <h6>
+    <span id="tanggal"></span>
+    <span id="jam"></span>
+   </h6>
   
   <!-- hero -->
     <section id="hero" class="container-fluid shared-padding">
